...
                                <rect key="frame" x="0.0" y="145" width="414" height="256"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="myCalendar"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="256" id="a32-Z0-W84"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My birthday is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NWo-WZ-JTp">
                                <rect key="frame" x="153" y="99" width="108" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="myBirthdayIs"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My phone is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHd-oB-JfC">
                                <rect key="frame" x="160.5" y="99" width="93" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="myPhoneIs"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tNG-ts-xAY">
                                <rect key="frame" x="167" y="145" width="80" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="phoneButton"/>
                                <state key="normal" title="09xxxxxxxx"/>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My cell phone is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Grg-Ac-XCL">
                                <rect key="frame" x="145" y="99" width="124" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="myCellPhoneIs"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aet-hN-6t7">
                                <rect key="frame" x="184" y="145" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="cellPhoneButton"/>
                                <state key="normal" title="Button"/>
                                <connections>
...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MzJ-EL-slc">
                                <rect key="frame" x="130" y="99" width="154" height="154"/>
                                <accessibility key="accessibilityConfiguration" identifier="avatar"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="154" id="Hab-gY-rP2"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mae-cR-RFr">
                                <rect key="frame" x="163.5" y="281" width="87" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="myNameIs"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mr Bently Park" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsp-dl-SRo">
                                <rect key="frame" x="147" y="320" width="120" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="fullName"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <nil key="textColor"/>
...
