...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9F-2K-NUY">
                                <rect key="frame" x="20" y="56" width="72" height="72"/>
                                <accessibility key="accessibilityConfiguration" identifier="loadMoreButtonTop"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="72" id="bLq-1h-V13"/>
                                    <constraint firstAttribute="width" constant="72" id="vae-NB-FQ2"/>
                                </constraints>
                                <state key="normal" image="icons-available-updates"/>
                                <connections>
                                    <action selector="touchLoadMore:" destination="BYZ-38-t0r" eventType="touchUpInside" id="be5-rF-8C7"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0dg-Ie-7x9">
                                <rect key="frame" x="322" y="56" width="72" height="72"/>
                                <accessibility key="accessibilityConfiguration" identifier="favButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="72" id="1Pg-Tf-oOf"/>
                                    <constraint firstAttribute="height" constant="72" id="R76-og-d5m"/>
                                </constraints>
                                <state key="normal" image="icons-heart-outline"/>
                                <connections>
...
